<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ProfileFragment">

    <ImageView
        android:id="@+id/drivio_img"
        android:layout_width="181dp"
        android:layout_height="98dp"
        android:contentDescription="drivio image"
        android:src="@drawable/drivio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/user_welcome_msg"
        android:layout_width="315dp"
        android:layout_height="53dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/user_welcome_msg"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drivio_img"
        app:layout_constraintVertical_bias="0.069" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_welcome_msg"
        app:layout_constraintVertical_bias="0.068">

        <Button
            android:id="@+id/login_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="#00BCD4"
            android:fontFamily="monospace"
            android:text="@string/login"
            android:textColor="#070707"
            android:textSize="17sp" />

        <Button
            android:id="@+id/register_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:backgroundTint="#00BCD4"
            android:fontFamily="monospace"
            android:text="@string/register"
            android:textColor="#070707"
            android:textSize="17sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

